zb-config-server/caas-config/zb-config-role.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zb-config
