zb-config-server/caas-config/zb-config-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: zb-config
  name: zb-config
  namespace: zb-config
spec:
  ports:
    - port: 80
      targetPort: 8888
  selector:
    app: zb-config
  type: LoadBalancer
